[gd_scene format=3 uid="uid://brt7k06l8fqqx"]

[ext_resource type="Script" uid="uid://px6rjnb3n5c" path="res://Scripts/dog_show.gd" id="1_g33d5"]
[ext_resource type="Texture2D" uid="uid://ty01cw7ytqh2" path="res://Assets/Art/DogShow/BG_Transition.png" id="1_thn2m"]
[ext_resource type="Texture2D" uid="uid://bl26iqaaire4w" path="res://Assets/Art/DogShow/Flashes/flashes0000.png" id="2_vd3k6"]
[ext_resource type="Texture2D" uid="uid://dqwc5y3o2pln6" path="res://Assets/Art/DogShow/Flashes/flashes0001.png" id="3_nmaij"]
[ext_resource type="Texture2D" uid="uid://i15nxmee7ps7" path="res://Assets/Art/DogShow/Flashes/flashes0002.png" id="4_y54xy"]
[ext_resource type="Texture2D" uid="uid://be0ggfs224yb3" path="res://Assets/Art/DogShow/Flashes/flashes0003.png" id="5_rt07u"]
[ext_resource type="Texture2D" uid="uid://b6bnoy0cie5w7" path="res://Assets/Art/DogShow/Flashes/flashes0004.png" id="6_neqw7"]
[ext_resource type="Texture2D" uid="uid://b2karuc88rbhj" path="res://Assets/Art/DogShow/Fire/Fire0000.png" id="7_o0hmv"]
[ext_resource type="Texture2D" uid="uid://cec4qiqult5ww" path="res://Assets/Art/DogShow/Fire/Fire0001.png" id="8_apsfi"]
[ext_resource type="Texture2D" uid="uid://dkon7gellkws8" path="res://Assets/Art/DogShow/Fire/Fire0002.png" id="9_s0l1t"]
[ext_resource type="Texture2D" uid="uid://bxhx38jlo0qcp" path="res://Assets/Art/DogShow/Fire/Fire0003.png" id="10_sk64f"]
[ext_resource type="Texture2D" uid="uid://camp7t4xbqdmo" path="res://Assets/Art/DogShow/Fire/Fire0004.png" id="11_0g3qd"]
[ext_resource type="Texture2D" uid="uid://b6uwru6glokmy" path="res://Assets/Art/DogShow/Fire/Fire0005.png" id="12_i8166"]
[ext_resource type="Texture2D" uid="uid://b8x0qcx10vyyo" path="res://Assets/Art/DogShow/Fire/Fire0006.png" id="13_rmgki"]
[ext_resource type="Texture2D" uid="uid://cpt6kp1u6u6ik" path="res://Assets/Art/DogShow/Curtains 2/Curtain0000.png" id="16_avxg7"]
[ext_resource type="Texture2D" uid="uid://6j7o7y6hsvg6" path="res://Assets/Art/DogShow/Curtains 2/Curtain0001.png" id="17_kmty7"]
[ext_resource type="Texture2D" uid="uid://c3b5ljgaodttp" path="res://Assets/Art/DogShow/Curtains 2/Curtain0002.png" id="18_qfgtg"]
[ext_resource type="Texture2D" uid="uid://dev1adxf303y0" path="res://Assets/Art/DogShow/Curtains 2/Curtain0003.png" id="19_f2pcf"]
[ext_resource type="Texture2D" uid="uid://bfn7r1x5todup" path="res://Assets/Art/DogShow/Curtains 2/Curtain0004.png" id="20_t2t7k"]
[ext_resource type="Texture2D" uid="uid://b3c2hrdp3k4qr" path="res://Assets/Art/DogShow/Curtains 2/Curtain0005.png" id="21_23vds"]
[ext_resource type="Texture2D" uid="uid://tdb7e1wkgwqo" path="res://Assets/Art/DogShow/Curtains 2/Curtain0006.png" id="22_b7wpr"]
[ext_resource type="Texture2D" uid="uid://r2n6cqsjf70i" path="res://Assets/Art/DogShow/Curtains 2/Curtain0007.png" id="23_fftg0"]
[ext_resource type="Texture2D" uid="uid://cj4ncloba8aod" path="res://Assets/Art/DogShow/Curtains 2/Curtain0008.png" id="24_n1i74"]
[ext_resource type="Texture2D" uid="uid://danukdmjk07vk" path="res://Assets/Art/DogShow/Curtains 2/Curtain0009.png" id="25_yifpy"]
[ext_resource type="Texture2D" uid="uid://btab2bkksoskt" path="res://Assets/Art/DogShow/Curtains 2/Curtain0010.png" id="26_exrle"]
[ext_resource type="Texture2D" uid="uid://bvfwlkubyl2bc" path="res://Assets/Art/DogShow/Curtains 2/Curtain0011.png" id="27_pn3e4"]
[ext_resource type="Texture2D" uid="uid://5ixjk245rxpf" path="res://Assets/Art/DogShow/Curtains 2/Curtain0014.png" id="28_laf3l"]
[ext_resource type="Texture2D" uid="uid://beni2k2bvb136" path="res://Assets/Art/DogShow/Curtains 2/Curtain0012.png" id="28_o6iyu"]
[ext_resource type="Texture2D" uid="uid://bxid6guktd2vw" path="res://Assets/Art/DogShow/Curtains 2/Curtain0013.png" id="29_buevw"]
[ext_resource type="Texture2D" uid="uid://djq8onf8ni23j" path="res://Assets/Art/DogShow/Curtains 2/Curtain0015.png" id="29_o6iyu"]
[ext_resource type="Texture2D" uid="uid://crxsd5tlbirr0" path="res://Assets/Art/DogShow/Curtains 2/Curtain0016.png" id="30_buevw"]
[ext_resource type="Texture2D" uid="uid://bmscr5rpe5lja" path="res://Assets/Art/DogShow/Curtains 2/Curtain0017.png" id="31_ndtfc"]
[ext_resource type="Texture2D" uid="uid://df0cck1bm8k5n" path="res://Assets/Art/DogShow/Curtains 2/Curtain0018.png" id="32_n6vns"]
[ext_resource type="Texture2D" uid="uid://c7vahxb6tt6jc" path="res://Assets/Art/DogShow/Curtains 2/Curtain0019.png" id="33_s0jng"]
[ext_resource type="Texture2D" uid="uid://brfbtv205vlbp" path="res://Assets/Art/DogShow/Curtains 2/Curtain0020.png" id="34_gen0e"]
[ext_resource type="Texture2D" uid="uid://bfbceucfeo1g5" path="res://Assets/Art/DogShow/Curtains 2/Curtain0021.png" id="35_3vaef"]
[ext_resource type="Texture2D" uid="uid://6a382j17vvmg" path="res://Assets/Art/DogShow/Curtains 2/Curtain0022.png" id="36_0yxm6"]
[ext_resource type="Texture2D" uid="uid://bqrsea138bpqx" path="res://Assets/Art/DogShow/Curtains 2/Curtain0023.png" id="37_pmgxo"]
[ext_resource type="Texture2D" uid="uid://ctf8rtf5l8h4g" path="res://Assets/Art/DogShow/Curtains 2/Curtain0024.png" id="38_p3pe5"]
[ext_resource type="Texture2D" uid="uid://bt4osdpe8dyqg" path="res://Assets/Art/DogShow/Curtains 2/Curtain0025.png" id="39_85frg"]
[ext_resource type="Texture2D" uid="uid://n3y7b2gp7x2f" path="res://Assets/Art/DogShow/Curtains 2/Curtain0026.png" id="40_dfch2"]
[ext_resource type="Texture2D" uid="uid://ib3485d1nmcq" path="res://Assets/Art/DogShow/Curtains 2/Curtain0027.png" id="41_3k3a0"]
[ext_resource type="Texture2D" uid="uid://8wtie1xastt2" path="res://Assets/Art/DogShow/Curtains 2/Curtain0028.png" id="42_wpnou"]
[ext_resource type="Texture2D" uid="uid://chhi5yfxllxfk" path="res://Assets/Art/DogShow/Curtains 2/Curtain0029.png" id="43_mbd6g"]
[ext_resource type="Texture2D" uid="uid://dc1213rt58s8g" path="res://Assets/Art/DogShow/Curtains 2/Curtain0030.png" id="44_7cbxu"]
[ext_resource type="Texture2D" uid="uid://c4tbjxkl0faos" path="res://Assets/Art/DogShow/Curtains 2/Curtain0031.png" id="45_61y5y"]
[ext_resource type="Texture2D" uid="uid://c7srbyec6jivy" path="res://Assets/Art/DogShow/Curtains 2/Curtain0032.png" id="46_l8365"]
[ext_resource type="Texture2D" uid="uid://c7fw4jrtdsvx2" path="res://Assets/Art/Dog Elite Concept Art.png" id="47_pkh00"]
[ext_resource type="PackedScene" uid="uid://cclscjnofjfq2" path="res://Objects/micro_swticher.tscn" id="49_kmty7"]
[ext_resource type="PackedScene" uid="uid://d2h480c4crevb" path="res://Globals/UI.tscn" id="50_qfgtg"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vd3k6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vd3k6")
}, {
"duration": 1.0,
"texture": ExtResource("3_nmaij")
}, {
"duration": 1.0,
"texture": ExtResource("4_y54xy")
}, {
"duration": 1.0,
"texture": ExtResource("5_rt07u")
}, {
"duration": 1.0,
"texture": ExtResource("6_neqw7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_2ueuv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_o0hmv")
}, {
"duration": 1.0,
"texture": ExtResource("8_apsfi")
}, {
"duration": 1.0,
"texture": ExtResource("9_s0l1t")
}, {
"duration": 1.0,
"texture": ExtResource("10_sk64f")
}, {
"duration": 1.0,
"texture": ExtResource("11_0g3qd")
}, {
"duration": 1.0,
"texture": ExtResource("12_i8166")
}, {
"duration": 1.0,
"texture": ExtResource("13_rmgki")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_fh3ea"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_avxg7")
}, {
"duration": 1.0,
"texture": ExtResource("17_kmty7")
}, {
"duration": 1.0,
"texture": ExtResource("18_qfgtg")
}, {
"duration": 1.0,
"texture": ExtResource("19_f2pcf")
}, {
"duration": 1.0,
"texture": ExtResource("20_t2t7k")
}, {
"duration": 1.0,
"texture": ExtResource("21_23vds")
}, {
"duration": 1.0,
"texture": ExtResource("22_b7wpr")
}, {
"duration": 1.0,
"texture": ExtResource("23_fftg0")
}, {
"duration": 1.0,
"texture": ExtResource("24_n1i74")
}, {
"duration": 1.0,
"texture": ExtResource("25_yifpy")
}, {
"duration": 1.0,
"texture": ExtResource("26_exrle")
}, {
"duration": 1.0,
"texture": ExtResource("27_pn3e4")
}, {
"duration": 1.0,
"texture": ExtResource("28_o6iyu")
}, {
"duration": 1.0,
"texture": ExtResource("29_buevw")
}, {
"duration": 1.0,
"texture": ExtResource("28_laf3l")
}, {
"duration": 1.0,
"texture": ExtResource("29_o6iyu")
}, {
"duration": 1.0,
"texture": ExtResource("30_buevw")
}, {
"duration": 1.0,
"texture": ExtResource("31_ndtfc")
}, {
"duration": 1.0,
"texture": ExtResource("32_n6vns")
}, {
"duration": 1.0,
"texture": ExtResource("33_s0jng")
}],
"loop": false,
"name": &"Close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("28_laf3l")
}, {
"duration": 1.0,
"texture": ExtResource("29_o6iyu")
}, {
"duration": 1.0,
"texture": ExtResource("30_buevw")
}, {
"duration": 1.0,
"texture": ExtResource("31_ndtfc")
}, {
"duration": 1.0,
"texture": ExtResource("32_n6vns")
}, {
"duration": 1.0,
"texture": ExtResource("33_s0jng")
}, {
"duration": 1.0,
"texture": ExtResource("34_gen0e")
}, {
"duration": 1.0,
"texture": ExtResource("35_3vaef")
}, {
"duration": 1.0,
"texture": ExtResource("36_0yxm6")
}, {
"duration": 1.0,
"texture": ExtResource("37_pmgxo")
}, {
"duration": 1.0,
"texture": ExtResource("38_p3pe5")
}, {
"duration": 1.0,
"texture": ExtResource("39_85frg")
}, {
"duration": 1.0,
"texture": ExtResource("40_dfch2")
}, {
"duration": 1.0,
"texture": ExtResource("41_3k3a0")
}, {
"duration": 1.0,
"texture": ExtResource("42_wpnou")
}, {
"duration": 1.0,
"texture": ExtResource("43_mbd6g")
}, {
"duration": 1.0,
"texture": ExtResource("44_7cbxu")
}, {
"duration": 1.0,
"texture": ExtResource("45_61y5y")
}, {
"duration": 1.0,
"texture": ExtResource("46_l8365")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_avxg7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_avxg7")
}, {
"duration": 1.0,
"texture": ExtResource("17_kmty7")
}, {
"duration": 1.0,
"texture": ExtResource("18_qfgtg")
}, {
"duration": 1.0,
"texture": ExtResource("19_f2pcf")
}, {
"duration": 1.0,
"texture": ExtResource("20_t2t7k")
}, {
"duration": 1.0,
"texture": ExtResource("21_23vds")
}, {
"duration": 1.0,
"texture": ExtResource("22_b7wpr")
}, {
"duration": 1.0,
"texture": ExtResource("23_fftg0")
}, {
"duration": 1.0,
"texture": ExtResource("24_n1i74")
}, {
"duration": 1.0,
"texture": ExtResource("25_yifpy")
}, {
"duration": 1.0,
"texture": ExtResource("26_exrle")
}, {
"duration": 1.0,
"texture": ExtResource("27_pn3e4")
}, {
"duration": 1.0,
"texture": ExtResource("28_o6iyu")
}, {
"duration": 1.0,
"texture": ExtResource("29_buevw")
}, {
"duration": 1.0,
"texture": ExtResource("28_laf3l")
}, {
"duration": 1.0,
"texture": ExtResource("29_o6iyu")
}, {
"duration": 1.0,
"texture": ExtResource("30_buevw")
}, {
"duration": 1.0,
"texture": ExtResource("31_ndtfc")
}, {
"duration": 1.0,
"texture": ExtResource("32_n6vns")
}, {
"duration": 1.0,
"texture": ExtResource("33_s0jng")
}],
"loop": false,
"name": &"Close",
"speed": 5.0
}]

[node name="DogShow" type="Node2D" unique_id=660536771]
script = ExtResource("1_g33d5")

[node name="BG" type="Sprite2D" parent="." unique_id=334696913]
position = Vector2(575.00006, 321.5)
scale = Vector2(0.6020834, 0.6027778)
texture = ExtResource("1_thn2m")

[node name="Stars" type="AnimatedSprite2D" parent="." unique_id=963909502]
position = Vector2(574.5, 323.50003)
scale = Vector2(0.60260415, 0.6009259)
sprite_frames = SubResource("SpriteFrames_vd3k6")
autoplay = "default"
speed_scale = 0.2

[node name="InfoDisplay" type="ColorRect" parent="." unique_id=2111558098]
offset_left = 394.0
offset_top = 101.0
offset_right = 800.0
offset_bottom = 442.0
color = Color(0, 0, 0, 0.78431374)

[node name="Controls" type="Label" parent="InfoDisplay" unique_id=86531800]
layout_mode = 0
offset_left = 8.0
offset_top = -59.0
offset_right = 399.0
offset_bottom = 190.0
theme_override_font_sizes/font_size = 32
text = "Controls:
"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Dash2" type="Label" parent="InfoDisplay" unique_id=1288642985]
layout_mode = 0
offset_left = 8.0
offset_top = -37.0
offset_right = 389.0
offset_bottom = 212.0
theme_override_font_sizes/font_size = 32
text = "
-------------------------------------"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Label" type="Label" parent="InfoDisplay" unique_id=395905050]
layout_mode = 0
offset_left = 8.0
offset_top = 99.0
offset_right = 384.0
offset_bottom = 240.0
theme_override_font_sizes/font_size = 32
text = "
- Space Bar -
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="Dash" type="Label" parent="InfoDisplay" unique_id=1258410943]
layout_mode = 0
offset_left = 8.0
offset_top = 73.0
offset_right = 384.0
offset_bottom = 322.0
theme_override_font_sizes/font_size = 32
text = "
-------------------------------------"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Label2" type="Label" parent="InfoDisplay" unique_id=988290119]
layout_mode = 0
offset_left = 10.0
offset_top = 208.0
offset_right = 386.0
offset_bottom = 349.0
theme_override_font_sizes/font_size = 22
text = "
Text Goes Here
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="Sprite2D" type="Sprite2D" parent="InfoDisplay" unique_id=761214238]
position = Vector2(199, 452)
scale = Vector2(0.2, 0.2)
texture = ExtResource("47_pkh00")

[node name="Fire" type="AnimatedSprite2D" parent="." unique_id=216570375]
position = Vector2(574.5, 323.50003)
scale = Vector2(0.60260415, 0.6009259)
sprite_frames = SubResource("SpriteFrames_2ueuv")
autoplay = "default"
speed_scale = 3.0

[node name="Micro-Swticher" parent="." unique_id=1138590153 instance=ExtResource("49_kmty7")]

[node name="Score" parent="." unique_id=1078211157 instance=ExtResource("50_qfgtg")]

[node name="Curtain" type="AnimatedSprite2D" parent="." unique_id=554165192]
position = Vector2(577.5, 320.00003)
scale = Vector2(0.6411459, 0.61759263)
sprite_frames = SubResource("SpriteFrames_fh3ea")
autoplay = "default"
speed_scale = 4.0

[node name="CurtainClose" type="AnimatedSprite2D" parent="." unique_id=1109573986]
position = Vector2(577.5, 320)
scale = Vector2(0.64, 0.61)
sprite_frames = SubResource("SpriteFrames_avxg7")
animation = &"Close"
speed_scale = 4.0

[connection signal="animation_finished" from="Curtain" to="." method="_on_curtain_animation_finished"]
[connection signal="animation_finished" from="CurtainClose" to="." method="_on_curtain_close_animation_finished"]
